Edit Post: Fix the alignement of button in the sidebar header

--- a/edit-post/components/sidebar/sidebar-header/style.scss
+++ b/edit-post/components/sidebar/sidebar-header/style.scss
@@ -20,10 +20,10 @@
 
 	.components-icon-button {
 		display: none;
-		margin-left: 0;
+		margin-left: auto;
 
-		&:first-of-type {
-			margin-left: auto;
+		~ .components-icon-button {
+			margin-left: 0;
 		}
 
 		@include break-medium() {
